tests/snapshots/pysnaptest__test_encoders_test_assert_json_snapshot_custom_encoder@pysnap.snap
---
source: src/lib.rs
description: "Test File Path: tests/test_encoders.py"
---
{
  "point": {
    "px": 4,
    "py": 5
  }
}
