tests/snapshots/pysnaptest__test_encoders_test_assert_json_snapshot_enum@pysnap.snap
---
source: src/lib.rs
description: "Test File Path: tests/test_encoders.py"
---
{
  "color": "green",
  "when": "2021-06-01T12:00:00"
}
