tests/snapshots/pysnaptest__test_encoders_test_assert_json_snapshot_pydantic_with_redactions@pysnap.snap
---
source: src/lib.rs
description: "Test File Path: tests/test_encoders.py"
---
{
  "address": {
    "street": "1 Main St",
    "zipcode": "00000"
  },
  "balance": "10.50",
  "created_at": "[ts]",
  "name": "Ada",
  "role": "green",
  "user_id": "[uuid]"
}
