tests/snapshots/pysnaptest__test_encoders_test_snapshot_decorator_dataclass@pysnap.snap
---
source: src/lib.rs
description: "Test File Path: tests/test_encoders.py"
---
{
  "x": 7,
  "y": 8
}
