tests/snapshots/pysnaptest__test_encoders_test_snapshot_list_of_models_with_date@pysnap.snap
---
source: src/lib.rs
description: "Test File Path: tests/test_encoders.py"
---
[
  {
    "happened_on": "2026-01-15",
    "name": "launch"
  },
  {
    "happened_on": "2026-03-02",
    "name": "review"
  }
]
