tests/snapshots/pysnaptest__test_snapshot_contents_json@pysnap.snap
---
source: src/lib.rs
description: "Test File Path: tests/test_snapshots.py"
---
{
  "test": "content"
}
