tests/snapshots/pysnaptest__test_snapshots_benchmark_test_pysnaptest_benchmark[10]@pysnap.snap
---
source: src/lib.rs
description: "Test File Path: tests/test_snapshots_benchmark.py"
---
{
  "0": [],
  "1": [
    1
  ],
  "2": [
    2,
    2
  ],
  "3": [
    3,
    3,
    3
  ],
  "4": [
    4,
    4,
    4,
    4
  ],
  "5": [
    5,
    5,
    5,
    5,
    5
  ],
  "6": [
    6,
    6,
    6,
    6,
    6,
    6
  ],
  "7": [
    7,
    7,
    7,
    7,
    7,
    7,
    7
  ],
  "8": [
    8,
    8,
    8,
    8,
    8,
    8,
    8,
    8
  ],
  "9": [
    9,
    9,
    9,
    9,
    9,
    9,
    9,
    9,
    9
  ]
}
