tests/snapshots/pysnaptest__test_snapshots_test_assert_binary_snapshot@pysnap.snap
---
source: src/lib.rs
description: "Test File Path: tests/test_snapshots.py"
extension: txt
snapshot_kind: binary
---
