tests/snapshots/pysnaptest__test_snapshots_test_assert_compressed_snapshot_gzip@pysnap.snap
---
source: src/lib.rs
description: "Test File Path: tests/test_snapshots.py"
extension: gz
snapshot_kind: binary
---
